tests/negative/typecheck/product_len.orng
// product_len.orng:6:32: error: product takes 3 fields, 2 values given
//     let x: (Int, Int, Int) = (3, '3')
//                               ^
// 
fn main() -> Int {
    let x: (Int, Int, Int) = (3, '3')
    x[0]
}